# monolith

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: tau_annealing.py  vs_pysr.py
docs/: experimental-results.md
monolith/: __init__.py  eml_ops.py  eml_tree.py  symbolic.py
paper/: fig_tree.tex  monolith.tex
tests/: test_eml_ops.py  test_eml_tree.py  test_symbolic.py
